--- a/main/templates/cms/admin_add.html
+++ b/main/templates/cms/admin_add.html
@@ -24,22 +24,20 @@
                                 <label for="input_pwd">管理员密码</label>
                                 <input type="password" class="form-control" id="input_pwd" placeholder="请输入管理员密码！">
                             </div>
-                            <div class="form-group">
-                                <label for="input_re_pwd">添加时间</label>
-                                <input type="password" class="form-control" id="input_re_pwd"
-                                       placeholder="请输入管理员添加时间！">
-                            </div>
                             
-                            <!-- <div class="form-group">
-                                <label for="input_role_id">所属角色</label>
-                                <select class="form-control" id="input_role_id">
-                                    <option value="0">---请选择所属角色---</option>
-                                    <option value="1">xxx</option>
+                            <div class="form-group">
+                                <label for="input_type">管理员类型</label>
+                                <select class="form-control" id="input_type">
+                                    <option value="0">---请选择管理员所属类型---</option>
+                                    <option value="1">超级管理员</option>
+                                    <option value="２">普通管理员</option>
                                 </select>
-                            </div> -->
+                            </div>
+
                         </div>
                         <div class="box-footer">
-                            <button type="submit" class="btn btn-primary">添加</button>
+                            
+                            <input type="button" class="btn btn-primary" onclick="submit_admin()" value="添加"></input>
                         </div>
                     </form>
                 </div>
