--- a/main/templates/cms/course_add.html
+++ b/main/templates/cms/course_add.html
@@ -24,7 +24,7 @@
                             <label for="input_url">文件</label>
                             <input type="file" id="input_url">
                             <div style="margin-top:5px;">
-                                <div id="moviecontainer"></div>
+                                <div id="classcontainer"></div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -37,36 +37,6 @@
                             <img data-src="holder.js/262x166" style="margin-top:5px;" class="img-responsive"
                                  alt="">
                         </div>
-                        <!-- <div class="form-group">
-                            <label for="input_price">价格</label>
-                            <select class="form-control" id="input_price">
-                                <option></option>
-                                <option value="1">５８０</option>
-                                <option value="2">７５０</option>
-                                <option value="3">３２０</option>
-
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="input_type">课程分类</label>
-                            <select class="form-control" id="input_type">
-                                <option></option>
-                                <option value="1">运营</option>
-                                <option value="2">营销</option>
-                                <option value="3">１４天改变计划</option>
-
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="input_lecture">课程讲师</label>
-                            <select class="form-control" id="input_lecture">
-                                <option></option>
-                                <option value="1">顾薇</option>
-                                <option value="2">曹虎</option>
-                                <option value="3">李叫兽</option>
-
-                            </select>
-                        </div> -->
                         <div class="form-group">
                             <label for="input_price">课程价格</label>
                             <input type="text" class="form-control" id="input_price" placeholder="请输入课程价格！">
