--- a/main/templates/cms/index.html
+++ b/main/templates/cms/index.html
@@ -53,7 +53,7 @@
                                     <a onclick="reurl('pwd')" class="btn btn-default btn-flat">修改密码</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a onclick="reurl('login')" class="btn btn-default btn-flat">退出系统</a>
+                                    <a href="{{url_for('cms.logout')}}" class="btn btn-default btn-flat">退出系统</a>
                                 </div>
                             </li>
                         </ul>
@@ -149,7 +149,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="treeview">
+                <!-- <li class="treeview">
                     <a href="#">
                         <i class="fa fa-heart" aria-hidden="true"></i>
                         <span>收藏管理</span>
@@ -162,7 +162,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-file-text" aria-hidden="true"></i>
@@ -171,23 +171,23 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="reurl('oplog_list')">
+                            <a onclick="oplog_list('oplog_list')">
                                 <i class="fa fa-circle-o"></i> 操作日志列表
                             </a>
                         </li>
-                        <li>
-                            <a onclick="reurl('adminloginlog_list')">
+                        <!-- <li>
+                            <a onclick="adminloginlog_list('adminloginlog_list')">
                                 <i class="fa fa-circle-o"></i> 管理员登录日志列表
                             </a>
-                        </li>
+                        </li> -->
                         <li>
-                            <a onclick="reurl('userloginlog_list')">
+                            <a onclick="userloginlog_list('userloginlog_list')">
                                 <i class="fa fa-circle-o"></i> 会员登录日志列表
                             </a>
                         </li>
                     </ul>
                 </li>
-                <li class="treeview">
+                <!-- <li class="treeview">
                     <a href="#">
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <span>权限管理</span>
@@ -205,7 +205,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
 
                 <li class="treeview">
                     <a href="#">
@@ -259,6 +259,8 @@
 <script src="{{url_for('static',filename='js/course_opeator.js')}}"></script>
 <script src="{{url_for('static',filename='js/user_operate.js')}}"></script>
 <script src="{{url_for('static',filename='js/comment_operate.js')}}"></script>
+<script src="{{url_for('static',filename='js/admin_operate.js')}}"></script>
+<script src="{{url_for('static',filename='js/login_operate.js')}}"></script>
 <script src="{{url_for('static',filename='js/jQuery-2.2.0.min.js')}}"></script>
 <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
 <script src="{{url_for('static',filename='js/jquery.slimscroll.min.js')}}"></script>
