--- a/main/templates/cms/login.html
+++ b/main/templates/cms/login.html
@@ -27,10 +27,10 @@
     </div>
     <div class="login-box-body">
         <p class="login-box-msg"></p>
-        <form action="/admin/" method="post" id="form-data">
+        <form action="" method="post" id="form-data">
             <div class="form-group has-feedback">
 
-                <input name="user" type="text" class="form-control" placeholder="请输入账号！">
+                <input name="user" type="text" class="form-control" id="input_name" placeholder="请输入账号！">
 
                 <div id='account' class="col-md-12" >
 
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group has-feedback">
 
-                <input name="pwd" type="password" class="form-control" placeholder="请输入密码！">
+                <input name="pwd" type="password" class="form-control" id="input_pwd"placeholder="请输入密码！">{{error}}
                 <span id='pass' class="glyphicon glyphicon-lock form-control-feedback"></span>
                 <div class="col-md-12" id="input_pwd"></div>
             </div>
@@ -57,8 +57,5 @@
 <script src="{{url_for('static',filename='js/jQuery-2.2.0.min.js')}}"></script>
 <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
 <script src="{{url_for('static',filename='js/icheck.min.js')}}"></script>
-
-
-
 </body>
 </html>
