--- a/main/templates/server/comment.html
+++ b/main/templates/server/comment.html
@@ -21,7 +21,139 @@
 
 
   <div id="v-left" style="">
-      <h1 style="font-size: 180px; color: #fff; text-align: center;">视频区</h1>
+      <!-- <h1 style="font-size: 180px; color: #fff; text-align: center;">视频区</h1> -->
+      <!DOCTYPE html>
+      <html>
+          <head>
+              <meta charset="UTF-8">
+              <style type="text/css">
+                  body{
+                      text-align: center;
+                  }
+                  #content-wrap{
+                      margin-top: 50px;
+                      display: inline-block;
+                  }
+
+                  #content{
+                      display: flex;
+                  }
+
+                  /* 播放器 */
+                  #video{
+                      display: inline-block;
+                      margin: 0;
+                      border: 12px solid #eee;
+                      box-sizing: border-box;
+                  }
+
+                  .video-list-wrap{
+                      background-color: #eee;
+                      border-right: 1px solid #fff;
+                  }
+
+                  /* 视频列表 */
+                  .video-list{
+                      display: inline-block;
+                      box-sizing: border-box;
+                      margin: 0;
+                      width: 150px;
+                      list-style: none;
+                      padding: 0;
+                      overflow: auto;
+                      font-size: 12px;
+
+                  }
+
+                  /* 列表项 */
+                  .video-item{
+                      cursor: pointer;
+                      width: 150px;
+                      box-sizing: border-box;
+                      text-align: left;
+                      padding: 5px 0 5px 10px;
+                  }
+
+                  .video-item:not(:last-child){
+                      border-bottom: 1px solid #fff;
+                  }
+
+                  .video-item:hover, .active{
+                      background-color: #ddd;
+                      color: #333;
+                  }
+
+                  /* 视频列表标题 */
+                  .video-title{
+                      background-color: gainsboro;
+                      font-size: 12px;
+                      height: 30px;
+                      line-height: 30px;
+                      text-align: center;
+                  }
+              </style>
+          </head>
+
+          <body>
+              <div id="content-wrap">
+                  <div id="content">
+                      <div class="video-list-wrap">
+                          <p class="video-title">视频列表</p>
+                          <ul class="video-list"></ul>
+                      </div>
+                  </div>
+              </div>
+          </body>
+          <!-- <script type="text/javascript" src="./jquery.js"></script>
+          <script type="text/javascript">
+              $(function(){
+                  var $content = $('#content');
+
+                  // 初始化播放器
+                  var init = function(src){
+                      var $video = $('<video id="video" controls>');
+                      $video.attr('preload', 'auto');
+                      $video.attr('width', 720).attr('height', 405);
+                      $video.attr('autoplay', 'autoplay');
+                      $video.append($('<source>').attr('src', src).attr('type', 'video/mp4'));
+                      $content.append($video);
+                  };
+
+                  /* 获取视频列表 */
+                  var $video_list = $('.video-list');
+
+                  $video_list.css('height', 340);
+
+                  $.ajax({
+                      url: "video.list",
+                      type: "GET",
+                      async: true,
+                      success: function(resp){
+
+                          $.each(resp.split('\n'), function(idx, item){
+                              if (item === '') return;
+                              var $p = $('<li>').addClass('video-item');
+                              $p.text(item);
+                              $p.data('path', item);
+                              $video_list.append($p);
+                          });
+                      }
+                  });
+
+                  init();
+
+                  /* 切换视频 */
+                  $video_list.on('click', '.video-item', function(){
+                      $("#video").remove();
+                      var $this = $(this);
+                      $this.parent().find('.active').removeClass('active');
+                      $this.addClass('active');
+                      init($this.data('path'));
+                  });
+
+              })
+          </script> -->
+      </html>
   </div>
 
   <div id="show">
@@ -57,10 +189,10 @@
                       <a id="coll-a">收藏</a></li>
 
                   <li style="position: absolute; right:50px;">
-                      <a id="">目录</a></li>
+                      <a id="catalog-a">目录</a></li>
               </ol>
           </div>
-          <div id="forum-box" style="display: none;">
+          <div id="forum-panal" style="display: none;">
               <div id="vr-content">
                   <div class="first-wrapper">
                       <ol class="forum-list">
@@ -71,22 +203,37 @@
               <div id="vr-foot">
                   <form id="forum-form" action="/forum", method="post">
                       <div class="vrf-wrapper" style="border:1px;">
-                          <textarea id="text" name="content" style="font-size: 20px; width: 94%; height: 90px; margin: 10px auto; left: 0; right: 0; position: absolute;"></textarea>
+                          <textarea id="forum" name="content"></textarea>
                           <button id="send-forum" style="position: absolute; bottom: 0; right: 0px; left: 0; width: 100%; border: none; height: 30px;">发送</button>
                       </div>
                   </form>
               </div>
           </div>
 
-          <div id="note-box" style="height: 100%;">
+          <div id="note-panal" style="height: 100%;">
               <div id="vr-content" style="height: calc(100% - 80px - 65px); background: #69c;">
-                  <h1>笔记</h1>
+                  <textarea id="note"></textarea>
+                  <button id="send-note" style="width: 90%; border: none; height: 30px;">发送</button>
               </div>
           </div>
 
-          <div id="coll-box" style="height: 100%;">
+          <div id="coll-panal" style="height: 100%;">
               <div id="vr-content" style="height: calc(100% - 80px - 65px); background: #f9c;">
                   <h1>收藏</h1>
+              </div>
+          </div>
+
+          <div id="catalog-panal" style="height: 100%;">
+              <div id="vr-content" style="height: calc(100% - 80px - 65px); background: #999;  padding-top: 0;">
+                  <ul>
+                    {% for i in videos %}
+                    <li style="height: 55px;"><div id="catalog">
+                        <span style="width: 30%;"><a href="">{{i.title}}</a></span>
+                        <span style="width: 60%;">{{i.description}}</span>
+                        <span style="width: 10%;">{{i.duration}}</span>
+                    </div></li>
+                    {% endfor %}
+                  </ul>
               </div>
           </div>
       </div>
