--- a/main/templates/server/pageframe.html
+++ b/main/templates/server/pageframe.html
@@ -17,7 +17,7 @@
     <!-- 顶部导航 -->
     <div class="site-header">
         <div class="container-left">
-            <a class="a head" href="{{ url_for('server.index') }}">千禧微课</a>
+            <a class="a head" href="#">千禧微课</a>
             <a class="a" href="">免费课程</a>
             <a class="a" href="">付费课程</a>
         </div>
