--- a/main/templates/server/forum.html
+++ b/main/templates/server/forum.html
@@ -2,7 +2,7 @@
 {% for f,v in forum_list %}
 <li>
     <div class="forumi">
-          <div style="height: 40px; width: 100%; background: #f1f1f1; text-align: left;">
+          <div style="height: 40px; width: 100%; background: #d1ead3; text-align: left;">
             <img class="img" src="{{f.profile}}"></img>
             <a styple="width: 80px;">{{f.name}}</a>
             <span style="font-size: 14px; padding-left: 20px;">{{v.date}}</span>
